bug fixed: classpath written in stigmata.xml cannot be appeared in GUI interface.
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/stigmata/trunk@195 acee48c3-7b26-0410-bdac-b3d0e5314bbc